--- a/site-react/assets/css/style.css
+++ b/site-react/assets/css/style.css
@@ -1,338 +1,7 @@
 @charset "UTF-8";
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html {
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body,
-button,
-dd,
-dl,
-dt,
-fieldset,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-input,
-legend,
-li,
-ol,
-p,
-select,
-table,
-td,
-textarea,
-th,
-ul,
-figure,
-figcaption {
-  margin: 0;
-  padding: 0;
-}
-
-body,
-button,
-input,
-select,
-table,
-textarea {
-  font-size: 16px;
-  line-height: 1.4;
-  color: #222;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", sans-serif;
-}
-
-a,
-a:hover,
-a:focus {
-  color: inherit;
-  text-decoration: none;
-}
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-
-input,
-textarea,
-button,
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-radius: 0;
-  font-size: 16px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
-}
-
-ul {
-  list-style: none;
-}
-
-em,
-address {
-  font-style: normal;
-}
-
-strong {
-  font-weight: normal;
-}
-
-img {
-  vertical-align: top;
-  width: 100%;
-}
-
-table {
-  border: 0;
-  border-collapse: collaspe;
-  border-spacing: 0;
-  width: 100%;
-}
-
-#skip a {
-  position: absolute;
-  left: 10px;
-  top: -92px;
-  z-index: 100000;
-  color: #fff;
-  font-size: 18px;
-  padding: 10px;
-  background: #000;
-}
-
-#skip a:focus,
-#skip a:active {
-  top: 20px;
-  -webkit-transition: all 0.6s ease;
-  transition: all 0.6s ease;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-}
-
-.mt0 {
-  margin-top: 0;
-}
-
-.mt10 {
-  margin-top: 10px;
-}
-
-.mt20 {
-  margin-top: 20px;
-}
-
-.mt30 {
-  margin-top: 30px;
-}
-
-.mt40 {
-  margin-top: 40px;
-}
-
-.mt50 {
-  margin-top: 50px;
-}
-
-.mt60 {
-  margin-top: 60px;
-}
-
-.mt70 {
-  margin-top: 70px;
-}
-
-.mt80 {
-  margin-top: 80px;
-}
-
-.mt90 {
-  margin-top: 90px;
-}
-
-.mt100 {
-  margin-top: 100px;
-}
-
-.mb0 {
-  margin-bottom: 0;
-}
-
-.mb10 {
-  margin-bottom: 10px;
-}
-
-.mb20 {
-  margin-bottom: 20px;
-}
-
-.mb30 {
-  margin-bottom: 30px;
-}
-
-.mb40 {
-  margin-bottom: 40px;
-}
-
-.mb50 {
-  margin-bottom: 50px;
-}
-
-.mb60 {
-  margin-bottom: 60px;
-}
-
-.mb70 {
-  margin-bottom: 70px;
-}
-
-.mb80 {
-  margin-bottom: 80px;
-}
-
-.mb90 {
-  margin-bottom: 90px;
-}
-
-.mb100 {
-  margin-bottom: 100px;
-}
-
-.pt0 {
-  padding-top: 0;
-}
-
-.pt10 {
-  padding-top: 10px;
-}
-
-.pt20 {
-  padding-top: 20px;
-}
-
-.pt30 {
-  padding-top: 30px;
-}
-
-.pt40 {
-  padding-top: 40px;
-}
-
-.pt50 {
-  padding-top: 50px;
-}
-
-.pt60 {
-  padding-top: 60px;
-}
-
-.pt70 {
-  padding-top: 70px;
-}
-
-.pt80 {
-  padding-top: 80px;
-}
-
-.pt90 {
-  padding-top: 90px;
-}
-
-.pt100 {
-  padding-top: 100px;
-}
-
-.pt200 {
-  padding-top: 200px;
-}
-
-.pb0 {
-  padding-bottom: 0;
-}
-
-.pb10 {
-  padding-bottom: 10px;
-}
-
-.pb20 {
-  padding-bottom: 20px;
-}
-
-.pb30 {
-  padding-bottom: 30px;
-}
-
-.pb40 {
-  padding-bottom: 40px;
-}
-
-.pb50 {
-  padding-bottom: 50px;
-}
-
-.pb60 {
-  padding-bottom: 60px;
-}
-
-.pb70 {
-  padding-bottom: 70px;
-}
-
-.pb80 {
-  padding-bottom: 80px;
-}
-
-.pb90 {
-  padding-bottom: 90px;
-}
-
-.pb100 {
-  padding-bottom: 100px;
-}
-
-.pb200 {
-  padding-bottom: 200px;
-}
-
 @font-face {
   font-family: 'saol';
-  src: url(https://cdn.jsdelivr.net/gh/webfontworld/saol/saol.woff2) format("woff2");
+  src: url(../fonts/saol.woff2) format("woff2"), url(../fonts/saol.woff) format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -806,4 +475,551 @@ table {
   font-style: normal;
   src: url(https://cdn.jsdelivr.net/gh/webfontworld/SCoreDream/SCoreDream9.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/webfontworld/SCoreDream/SCoreDream9.woff) format("woff");
   font-display: swap;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+legend,
+li,
+ol,
+p,
+select,
+table,
+td,
+textarea,
+th,
+ul,
+figure,
+figcaption {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+button,
+input,
+select,
+table,
+textarea {
+  color: #222;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", sans-serif;
+}
+
+a,
+a:hover,
+a:focus {
+  color: inherit;
+  text-decoration: none;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+input,
+textarea,
+button,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+em,
+address {
+  font-style: normal;
+}
+
+strong {
+  font-weight: normal;
+}
+
+img {
+  vertical-align: top;
+  width: 100%;
+}
+
+table {
+  border: 0;
+  border-collapse: collaspe;
+  border-spacing: 0;
+  width: 100%;
+}
+
+#skip a {
+  position: absolute;
+  left: 10px;
+  top: -92px;
+  z-index: 100000;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px;
+  background: #000;
+}
+
+#skip a:focus,
+#skip a:active {
+  top: 20px;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.mt0 {
+  margin-top: 0;
+}
+
+.mt10 {
+  margin-top: 10px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 30px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.mt50 {
+  margin-top: 50px;
+}
+
+.mt60 {
+  margin-top: 60px;
+}
+
+.mt70 {
+  margin-top: 70px;
+}
+
+.mt80 {
+  margin-top: 80px;
+}
+
+.mt90 {
+  margin-top: 90px;
+}
+
+.mt100 {
+  margin-top: 100px;
+}
+
+.mb0 {
+  margin-bottom: 0;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
+.mb30 {
+  margin-bottom: 30px;
+}
+
+.mb40 {
+  margin-bottom: 40px;
+}
+
+.mb50 {
+  margin-bottom: 50px;
+}
+
+.mb60 {
+  margin-bottom: 60px;
+}
+
+.mb70 {
+  margin-bottom: 70px;
+}
+
+.mb80 {
+  margin-bottom: 80px;
+}
+
+.mb90 {
+  margin-bottom: 90px;
+}
+
+.mb100 {
+  margin-bottom: 100px;
+}
+
+.pt0 {
+  padding-top: 0;
+}
+
+.pt10 {
+  padding-top: 10px;
+}
+
+.pt20 {
+  padding-top: 20px;
+}
+
+.pt30 {
+  padding-top: 30px;
+}
+
+.pt40 {
+  padding-top: 40px;
+}
+
+.pt50 {
+  padding-top: 50px;
+}
+
+.pt60 {
+  padding-top: 60px;
+}
+
+.pt70 {
+  padding-top: 70px;
+}
+
+.pt80 {
+  padding-top: 80px;
+}
+
+.pt90 {
+  padding-top: 90px;
+}
+
+.pt100 {
+  padding-top: 100px;
+}
+
+.pt200 {
+  padding-top: 200px;
+}
+
+.pb0 {
+  padding-bottom: 0;
+}
+
+.pb10 {
+  padding-bottom: 10px;
+}
+
+.pb20 {
+  padding-bottom: 20px;
+}
+
+.pb30 {
+  padding-bottom: 30px;
+}
+
+.pb40 {
+  padding-bottom: 40px;
+}
+
+.pb50 {
+  padding-bottom: 50px;
+}
+
+.pb60 {
+  padding-bottom: 60px;
+}
+
+.pb70 {
+  padding-bottom: 70px;
+}
+
+.pb80 {
+  padding-bottom: 80px;
+}
+
+.pb90 {
+  padding-bottom: 90px;
+}
+
+.pb100 {
+  padding-bottom: 100px;
+}
+
+.pb200 {
+  padding-bottom: 200px;
+}
+
+#header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background: black;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "Rajdhani";
+  border-bottom: 1px solid #2e2e30;
+}
+
+#header .header__port {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+}
+
+#header .header__port a {
+  display: inline-block;
+  padding: 7px;
+  margin: 10px;
+}
+
+#header .header__logo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+  text-align: center;
+}
+
+#header .header__logo a {
+  font-size: 30px;
+  font-family: "Playfair Display";
+  font-weight: bold;
+  padding: 7px 7px 9px;
+  margin: 10px;
+  display: block;
+}
+
+#header .header__menu {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+  text-align: right;
+}
+
+#header .header__menu ul {
+  margin-right: 10px;
+}
+
+#header .header__menu ul li {
+  display: inline;
+}
+
+#header .header__menu ul li a {
+  display: inline-block;
+  padding: 5px;
+  margin: 2px;
+}
+
+#header .header__ham {
+  position: absolute;
+  left: 14px;
+  top: 18px;
+  width: 40px;
+  height: 40px;
+  display: none;
+}
+
+#header .header__ham::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  width: 10px;
+  height: 10px;
+  background: #fff;
+  -webkit-box-shadow: 0 14px 0 #fff;
+          box-shadow: 0 14px 0 #fff;
+}
+
+#header .header__ham::after {
+  content: '';
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  width: 10px;
+  height: 10px;
+  background: #fff;
+  -webkit-box-shadow: 0 -14px 0 #fff;
+          box-shadow: 0 -14px 0 #fff;
+}
+
+@media (max-width: 1100px) {
+  #header .header__menu {
+    display: none;
+  }
+  #header .header__port {
+    display: none;
+  }
+  #header .header__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+  #header .header__ham {
+    display: block;
+  }
+}
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: black;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "Rajdhani";
+  border-top: 1px solid #2e2e30;
+}
+
+#footer div {
+  padding: 20px;
+  text-align: center;
+}
+
+#footer div h4 {
+  font-weight: 500;
+  text-transform: capitalize;
+  padding: 6px;
+}
+
+#footer div h4,
+#footer div p,
+#footer div ul {
+  display: inline-block;
+}
+
+#footer div li {
+  display: inline;
+}
+
+#footer div li a {
+  display: inline-block;
+  padding: 4px;
+}
+
+#footer div:nth-child(1) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+}
+
+#footer div:nth-child(2) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+  border-left: 1px solid #2e2e30;
+  border-right: 1px solid #2e2e30;
+}
+
+#footer div:nth-child(3) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+}
+
+@media (max-width: 1100px) {
+  #footer div:nth-child(1) {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+  #footer div:nth-child(2) {
+    display: none;
+  }
+  #footer div:nth-child(3) {
+    display: none;
+  }
+}
+
+#mainCont {
+  background-color: #000;
+  height: 100vh;
+  color: #fff;
+  font-family: "saol";
+  font-size: 9vw;
+  line-height: .91;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
