--- a/site-react/assets/css/style.css
+++ b/site-react/assets/css/style.css
@@ -477,6 +477,23 @@
   font-display: swap;
 }
 
+:root {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+@media (max-width: 1000px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 800px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
 *,
 *:before,
 *:after {
@@ -824,6 +841,7 @@ table {
           justify-content: space-between;
   font-family: "Rajdhani";
   border-bottom: 1px solid #2e2e30;
+  z-index: 10000;
 }
 
 #header .header__port {
@@ -925,6 +943,17 @@ table {
   }
 }
 
+@media (max-width: 800px) {
+  #header .header__logo a {
+    font-size: 22px;
+  }
+  #header .header__ham {
+    top: 12px;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+}
+
 #footer {
   position: fixed;
   left: 0;
@@ -943,6 +972,7 @@ table {
           justify-content: space-between;
   font-family: "Rajdhani";
   border-top: 1px solid #2e2e30;
+  z-index: 10000;
 }
 
 #footer div {
@@ -1005,6 +1035,12 @@ table {
   }
 }
 
+@media (max-width: 800px) {
+  #footer div {
+    padding: 14px;
+  }
+}
+
 #mainCont {
   background-color: #000;
   height: 100vh;
@@ -1022,4 +1058,87 @@ table {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+#mainCont br {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  #mainCont {
+    font-size: 15vw;
+  }
+  #mainCont br {
+    display: block;
+  }
+}
+
+#mainCont2 {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#mainCont2 .main-cont1 {
+  white-space: nowrap;
+  width: 50%;
+  height: 100vh;
+  background-color: #000;
+  color: #fff;
+  font-family: "saol";
+  font-size: 7vw;
+  line-height: .9;
+  text-transform: uppercase;
+  padding-left: 300px;
+  padding-top: 310px;
+  z-index: 10;
+}
+
+#mainCont2 .main-cont1 br {
+  display: none;
+}
+
+#mainCont2 .main-cont2 {
+  overflow: hidden;
+  width: 50%;
+  height: 100vh;
+}
+
+#mainCont2 .main-cont2 img {
+  width: 700px;
+  height: 600px;
+  margin-top: 200px;
+  border: 7px solid #000;
+}
+
+@media (max-width: 1100px) {
+  #mainCont2 {
+    background: #000;
+  }
+  #mainCont2 .main-cont1 {
+    padding-left: 100px;
+    font-size: 10vw;
+    padding-top: 380px;
+  }
+  #mainCont2 .main-cont2 img {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 800px) {
+  #mainCont2 {
+    background: #000;
+  }
+  #mainCont2 .main-cont1 {
+    background: url(../img/reactcat.png) no-repeat center center;
+    background-size: cover;
+    padding-left: 50px;
+    font-size: 12vw;
+    padding-top: 380px;
+  }
+  #mainCont2 .main-cont2 img {
+    display: none;
+  }
 }
