--- a/site-react/assets/scss/_layout.scss
+++ b/site-react/assets/scss/_layout.scss
@@ -19,7 +19,7 @@
     justify-content: space-between;
     font-family: $font-sub;
     border-bottom : 1px solid #2e2e30;
-    
+    z-index: 10000;    
 
     .header__port {
         flex : 0 0 30%;
@@ -90,8 +90,23 @@
     #header {
         .header__menu {display: none;}
         .header__port {display: none;}
-        .header__logo {flex : 0 0 100%;}
+        .header__logo {
+            flex : 0 0 100%;
+        }
         .header__ham {display: block;}
+    }
+}
+@media(max-width:800px){
+    #header  {
+        .header__logo {
+            a {
+                font-size: 22px;
+            }
+        }
+        .header__ham {
+            top: 12px;
+            transform: scale(0.8);
+        }
     }
 }
 
@@ -109,6 +124,7 @@
     justify-content: space-between;
     font-family: $font-sub;
     border-top : 1px solid #2e2e30;
+    z-index: 10000; 
 
     div {
         padding: 20px;
@@ -152,5 +168,15 @@
             div:nth-child(1){flex : 0 0 100%;}
             div:nth-child(2){display: none;}
             div:nth-child(3){display: none;}
-    }
+        }
 }
+
+
+@media(max-width:800px) {
+    #footer {
+            div {
+                padding: 14px;
+            }
+        }
+}
+
