--- a/site-react/assets/scss/_vars.scss
+++ b/site-react/assets/scss/_vars.scss
@@ -1,30 +1,22 @@
+$font-main : 'saol';
+$font-logo : 'Playfair Display';
+$font-sub : 'Rajdhani';
+$font-kor1 : 'Chosunilbo_myungjo';
+$font-kor1 : 'SCoreDream';
+
 :root {
-    // --font-sub : 'Rajdhani';
-    // --font-main : 'saol';
-    // --font-kor1 : 'Chosunilbo_myungjo';
-    // --font-logo : 'Playfair Display';
-    // --font-kor1 : 'SCoreDream';
+    font-size: 16px;
+    line-height: 1.4;
 }
 
-    $font-main : 'saol';
-    $font-logo : 'Playfair Display';
-    $font-sub : 'Rajdhani';
-    $font-kor1 : 'Chosunilbo_myungjo';
-    $font-kor1 : 'SCoreDream';
+@media (max-width :1000px){
+    :root {
+        font-size: 14px;
+    }
+}
 
-// :root {
-//     font-size: 16px;
-//     line-height: 1.4;
-// }
-
-// @media (max-width :1000px){
-//     :root {
-//         font-size: 14px;
-//     }
-// }
-
-// @media (max-width :800px){
-//     :root {
-//         font-size: 12px;
-//     }
-// }
+@media (max-width :800px){
+    :root {
+        font-size: 12px;
+    }
+}
