--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -1,5 +1,146 @@
 // #mainCont
 // #aboutCont
+.container {
+    width: 1300px;
+    margin: 0 auto;
+}
+#main h2 {
+    margin-top: 200px;
+    font-size: 120px;
+    font-family: $font-main;
+}
+
+@media (max-width: 1100px){
+    #main  h2{
+        padding-left: 70px;
+        font-size: 80px;
+
+        br {
+            display: none;
+        }
+    }
+}
+
+.aboutImg {
+    width: 1300px;
+    height: 600px;
+    background: url(../img/aboutImg03.png) no-repeat center center;
+    background-size: cover;
+    margin-top: 250px;
+}
+.desc1 {
+    width: 100%;
+    height: 160px;
+    // background: #000;
+    margin-top: 60px;
+    font-size: 18px;
+    line-height: 2;
+
+    p {
+        margin-bottom: 20px;
+        font-family: $font-sub;
+    }
+}
+
+.about2 {
+    width: 100%;
+    height: 1100px;
+    margin-top: 300px;
+    overflow: hidden;
+    font-family: $font-sub;
+    font-size: 18px;
+
+    .box1 {
+        width: 65%;
+        height: 100%;
+        background-color: rgb(62, 143, 125);
+        float: left;
+        background: url(../img/aboutImg01.jpg) no-repeat center center;
+        background-size: cover;
+    }
+    .box2 {
+        width: 35%;
+        height: 100%;
+        float: left;
+        padding-left: 70px;
+        p {
+            margin-bottom: 50px;   
+        }
+        span {
+            line-height: 2;
+        }
+    }
+}
+
+.about3 {
+    width: 100%;
+    height: 480px;
+    margin-top: 370px;
+    overflow: hidden;
+
+
+    .box3 {
+        width: 45%;
+        height: inherit;
+        float: left;
+        font-size: 18px;
+
+        p {
+            margin-bottom: 50px;   
+        }
+        span {
+            line-height: 2;
+        }
+    }
+    .box4 {
+        width: 50%;
+        height: inherit;
+        background-color: blue;
+        background: url(../img/aboutImg02.png) no-repeat center center;
+        background-size: cover;
+        float: right;
+    }
+}
+
+footer {
+    margin-top: 420px; 
+    width: 100%;
+    height: 1000px;
+    background-color: #000;
+    color : #fff;
+
+    .footcon {
+        margin: 0 auto;
+        text-align: center;
+
+        .new {
+            padding-top: 260px;
+            padding-bottom: 80px;
+            font-size: 20px;
+        }
+        .get {
+            font-size: 100px;
+            white-space: nowrap;
+        }
+        .touch {
+            font-size: 100px;
+            padding-bottom: 60px;
+        }
+        .us {
+            border : 1px solid #fff;
+            border-radius: 50px;
+            width: 250px;
+            margin: 0 auto;
+            height: 70px;
+            a {
+                font-size: 25px;
+                line-height: 65px;
+            }
+    }
+}
+
+
+
 // #referCont
 // #scriptCont
 // #portCont
@@ -99,4 +240,5 @@
             }
         }
     }
+}
 }
