--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -11,12 +11,37 @@
 }
 
 @media (max-width: 1100px){
-    #main  h2{
-        padding-left: 70px;
-        font-size: 80px;
+    #main {
+        width: 1100px;
 
-        br {
-            display: none;
+    .container {
+        width: 900px;
+    }
+
+        h2{
+            font-size:150px;
+            text-align: center;
+    
+            br {
+                display: none;
+            }
+        }
+    }
+}
+@media (max-width: 800px){
+    #main {
+        width: 800px;
+    .container {
+        width: 600px;
+    }
+
+        h2{
+            font-size:70px;
+            text-align: center;
+    
+            br {
+                display: none;
+            }
         }
     }
 }
@@ -42,6 +67,24 @@
     }
 }
 
+@media (max-width: 1100px){
+   .aboutImg {
+       width: 900px;
+       height: 400px;
+   }
+}
+
+@media (max-width: 800px){
+    .aboutImg {
+        width: 600px;
+        height: 200px;
+        margin-top: 100px;
+    }
+    .desc1 {
+        font-size: 13px;
+    }
+ }
+
 .about2 {
     width: 100%;
     height: 1100px;
@@ -52,7 +95,7 @@
 
     .box1 {
         width: 65%;
-        height: 100%;
+        height: inherit;
         background-color: rgb(62, 143, 125);
         float: left;
         background: url(../img/aboutImg01.jpg) no-repeat center center;
@@ -60,7 +103,7 @@
     }
     .box2 {
         width: 35%;
-        height: 100%;
+        height: inherit;
         float: left;
         padding-left: 70px;
         p {
@@ -71,6 +114,38 @@
         }
     }
 }
+
+
+@media (max-width: 1100px){
+    .about2 {
+      
+        .box1 {
+           
+      
+        }
+        .box2 {
+           
+        }
+    }
+}
+
+@media (max-width: 800px){
+    .about2 {
+        margin-top: 100px;
+        height: 600px;
+        .box1 {
+           height: 300px;
+            width: 100%;
+        }
+        .box2 {
+           width: 100%;
+           padding-left: 0;
+           font-size: 13px;
+           padding-top: 30px;
+        }
+    }
+}
+
 
 .about3 {
     width: 100%;
@@ -99,6 +174,27 @@
         background: url(../img/aboutImg02.png) no-repeat center center;
         background-size: cover;
         float: right;
+    }
+}
+
+@media (max-width: 800px){
+    .about3 {
+       margin-top: 0;
+       height: 600px;
+
+       .box3 {
+            width: 100%;
+            height: 150px;
+            font-size: 13px;
+
+            p {
+                margin-bottom: 20px;
+            }
+       }
+       .box4 {
+            width: 100%;
+            height: 400px;
+       }
     }
 }
 
@@ -136,6 +232,24 @@ footer {
                 font-size: 25px;
                 line-height: 65px;
             }
+    }
+}
+
+@media (max-width: 800px){
+    footer {
+        margin-top: 100px;
+        
+        .footcon {
+            .get {
+                font-size: 50px;
+          
+            }
+            .touch {
+                font-size: 50px;
+        
+            }
+        }
+     
     }
 }
 
