--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -198,7 +198,7 @@
     }
 }
 
-footer {
+.start {
     margin-top: 420px; 
     width: 100%;
     height: 1000px;
@@ -236,7 +236,7 @@ footer {
 }
 
 @media (max-width: 800px){
-    footer {
+    .start {
         margin-top: 100px;
         
         .footcon {
