--- a/site-react/assets/scss/style.scss
+++ b/site-react/assets/scss/style.scss
@@ -5,7 +5,7 @@
 @import "./vars";
 @import "./reset";
 @import "./mixins";
-
+ 
 //loader
 @import "./loader";
 
@@ -14,3 +14,4 @@
 
 //pages
 @import "./pages";
+@import "./about";
