--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -155,6 +155,86 @@ figcaption {
   background-image: url(../img/bg20@2.jpg);
 }
 
+.bg21 {
+  background-image: url(../img/bg21@2.jpg);
+}
+
+.bg22 {
+  background-image: url(../img/bg22@2.jpg);
+}
+
+.bg23 {
+  background-image: url(../img/bg23@2.jpg);
+}
+
+.bg24 {
+  background-image: url(../img/bg24@2.jpg);
+}
+
+.bg25 {
+  background-image: url(../img/bg25@2.jpg);
+}
+
+.bg26 {
+  background-image: url(../img/bg26@2.jpg);
+}
+
+.bg27 {
+  background-image: url(../img/bg27@2.jpg);
+}
+
+.bg28 {
+  background-image: url(../img/bg28@2.jpg);
+}
+
+.bg29 {
+  background-image: url(../img/bg29@2.jpg);
+}
+
+.bg30 {
+  background-image: url(../img/bg30@2.jpg);
+}
+
+.bg31 {
+  background-image: url(../img/bg31@2.jpg);
+}
+
+.bg32 {
+  background-image: url(../img/bg32@2.jpg);
+}
+
+.bg33 {
+  background-image: url(../img/bg33@2.jpg);
+}
+
+.bg34 {
+  background-image: url(../img/bg34@2.jpg);
+}
+
+.bg35 {
+  background-image: url(../img/bg35@2.jpg);
+}
+
+.bg36 {
+  background-image: url(../img/bg36@2.jpg);
+}
+
+.bg37 {
+  background-image: url(../img/bg37@2.jpg);
+}
+
+.bg38 {
+  background-image: url(../img/bg38@2.jpg);
+}
+
+.bg39 {
+  background-image: url(../img/bg39@2.jpg);
+}
+
+.bg40 {
+  background-image: url(../img/bg40@2.jpg);
+}
+
 #main {
   width: 100%;
   height: 100vh;
