--- a/blueasy/assets/css/style.css
+++ b/blueasy/assets/css/style.css
@@ -108,7 +108,7 @@
     height: 800px;
     background: url(../img/mainBg.jpg) no-repeat center;
     background-size: cover;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     position: relative;
 }
 #section1 .titleDesc {
@@ -146,7 +146,7 @@
     background-color: #4bcaff;
 }
 #section2 h2 {
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     color : #fff;
     font-size: 30px;
     text-transform: uppercase;
@@ -167,7 +167,7 @@
 #section2 .content .cont{
     width: 23%;
     height: 100%;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     color : #fff;
 }
 
@@ -204,7 +204,7 @@
     width: 30%;
     height: 100px;
     font-size: 20px;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     font-weight: lighter;
     font-style: normal;
 }
@@ -282,7 +282,7 @@
     position: relative;
     color : #fff;
     font-size: 72px;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     font-weight: lighter;
     line-height: 270px;
     text-align: center;
@@ -366,7 +366,7 @@
     background-color: #4bcaff;
     color : #fff;
     font-weight: lighter;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     font-size: 30px;
 }
 #section5 .sec5_title {
@@ -401,7 +401,7 @@
     background-size: cover;
     color : #fff;
     font-weight: lighter;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
 } 
 #section6 .sec6 {
     width: 100%; height: 500px;
@@ -455,7 +455,7 @@
     width: 100%;
     height: 360px;
     color : #515f67;
-    font-family: 'Segoe UI Light';
+    font-family: 'Segoe UI Light', sans-serif;
     font-weight: lighter;
 }
 
@@ -468,7 +468,7 @@
 
 #section7 .sec7_title p em {
     float: right;
-    font-family: 'Bitter', serif;
+    font-family: 'Bitter', sans-serif;
     font-size: 84px;
     margin-top: -60px;
 }
@@ -484,7 +484,7 @@
 }
 #section7 .sec7_desc h2 {
     color : #4bcaff;
-    font-family: 'Segoe UI Bold';
+    font-family: 'Segoe UI Bold', sans-serif;
     font-weight: bold;
     font-size: 12px;
     margin-top: 35px;
@@ -530,7 +530,7 @@
     display: block;
     font-size: 14px;
     font-weight: bold;
-    font-family: 'Segoe UI Bold';
+    font-family: 'Segoe UI Bold', sans-serif;
     margin-bottom: 10px;
 }
 .sec8_msg .contact_info .infoWrite input {
@@ -550,7 +550,7 @@
     font-size: 15px;
     line-height: 1.8;
     font-weight: normal;
-    font-family: 'Segoe UI Semibold';
+    font-family: 'Segoe UI Semibold', sans-serif;
 }
 .sec8_msg .contact_info .infoText .text1 {
     margin-bottom: 18px;
@@ -565,7 +565,7 @@
 .sec8_msg .boardText label {
     display: block;
     margin-bottom: 10px;
-    font-family: 'Segoe UI Bold';
+    font-family: 'Segoe UI Bold', sans-serif;
     font-weight: bold;
 }
 .sec8_msg .boardText textarea {
@@ -589,7 +589,7 @@
     background: #4bcaff;
     border : none;
     color : #fff;
-    font-family: 'Segoe UI Bold';
+    font-family: 'Segoe UI Bold', sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
